# welstory_menu

./: .env.sample  .gitignore  LICENSE  README.md  main.py  pyproject.toml
bobbot/: menu_image.py  slack_message.py  welstory.py
src/bobbot/: menu_image.py  slack_message.py  welstory.py
src/config/: base.py
src/messenger/: slack_util.py
